--- a/Pipfile
+++ b/Pipfile
@@ -34,6 +34,7 @@ sqlparse = "==0.4.4"
 typing-extensions = "==4.5.0"
 tzdata = "==2023.3"
 urllib3 = "==2.0.3"
+drf-yasg = {extras = ["validation"], version = "*"}
 
 [dev-packages]
 
